@@ -7,6 +7,10 @@ Fri Oct 12 14:01:25 CDT 2001  Linas Vepstas <linas@linas.org>
 
         * ctree.c: bugfix: print start, end, due dates correctly
 
+        * props-proj.c: bugfix: fix property box sensitivity.
+          What's up with that anthrax shit?  That's some bad shit
+          goin down.
+
 Fri Oct 05 11:20:18 2001  George Lebl <jirka@5z.com>
 
 	* Makefile.am, journal.c, plug-in.c, prefs.c, props-invl.c,
